# Animate2D

./: CMakeLists.txt  README.md
P1/: CMakeLists.txt  Mesh.h  Mesh_fshader.glsl  Snitch_vshader.glsl  Snitch_wing_fshader.glsl  fb_fshader.glsl  fshader.glsl  main.cpp  vshader.glsl
renders/: GoldenSnitchRendering.avi
